<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.konradlorenz.autenticacion.PubDetails">
    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="18dp"
            android:text="@string/detailedAdTitle"
            android:textColor="@color/colorP"
            android:textSize="22sp"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="138dp"
            android:layout_height="136dp"
            android:layout_alignBottom="@+id/adDetails"
            android:layout_alignEnd="@+id/adDescription"
            android:layout_alignRight="@+id/adDescription"
            android:layout_marginBottom="23dp"
            android:contentDescription="TODO"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/createdBy"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="58dp"
            android:text="@string/createdBy"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/userEmail"
            android:layout_width="185dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/createdBy"
            android:layout_marginTop="105dp"
            android:text="user email"
            android:textSize="16sp"
            android:layout_alignLeft="@+id/createdBy" />


        <TextView
            android:id="@+id/adDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/adName"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="23dp"
            android:layout_marginLeft="37dp"
            android:layout_marginStart="37dp"
            android:text="@string/adDetails"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/adTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/adDetails"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="227dp"
            android:text="@string/adTitle"
            android:textSize="16sp"
            android:layout_alignLeft="@+id/adDetails" />

        <TextView
            android:id="@+id/adName"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/createdBy"
            android:layout_alignTop="@+id/adTitle"
            android:layout_gravity="center_vertical"
            android:text="@string/adName"
            android:textSize="16sp"
            android:layout_alignLeft="@+id/adTitle" />


        <TextView
            android:id="@+id/adDescription"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/adDetails"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="207dp"
            android:text="@string/adDescription"
            android:textSize="16sp"
            android:layout_alignLeft="@+id/adDetails" />

        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="179dp"
            android:layout_height="100dp"
            android:layout_alignBaseline="@+id/adDescription"
            android:layout_alignBottom="@+id/adDescription"
            android:layout_alignLeft="@+id/nextButton"
            android:layout_alignStart="@+id/nextButton"
            android:layout_gravity="center_vertical"
            android:text="@string/descriptionText"
            android:textSize="16sp" />

        <Button
            android:id="@+id/previousButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="44dp"
            android:layout_marginStart="50dp"
            android:layout_weight="1.0"
            android:background="@color/colorP"
            android:text="@string/previousButton"
            android:theme="@style/ThemeOverlay.MyDarkButton" />

        <Button
            android:id="@+id/nextButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/previousButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="55dp"
            android:layout_weight="1.0"
            android:background="@color/colorAccent"
            android:text="@string/nextButton"
            android:theme="@style/ThemeOverlay.MyDarkButton"
            android:layout_alignParentRight="true"
            tools:ignore="RtlCompat" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
